<resources>
    <string name="app_name">PKU Helper</string>
    <string name="app_name_text">PKU Helper - 北大地带</string>
    <string name="title_ipgw">网关连接</string>
    <string name="title_course">课程表</string>
    <string name="title_mypku">我的PKU</string>
    <string name="title_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">登录IAAA</string>
    <string name="username">学号</string>
    <string name="password">密码</string>
    <string name="newpassword">新密码</string>
    <string name="input_newpassword">请输入新密码</string>
    <string name="login">登录</string>
    <string name="post">发表</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="guest">游客</string>
    <string name="save">保存</string>
    <string name="close">关闭</string>
    <string name="reset">重置</string>
    <string name="change">修改</string>
    <string name="refresh">刷新</string>
    <string name="search">搜索</string>
    <string name="captcha">验证码</string>
    <string name="must">必填</string>
    <string name="send">发送</string>
    <string name="date">日期</string>
    <string name="time">时间</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="aftertomorrow">后天</string>
    <string name="original">原文</string>
    <string name="comment">评论</string>
    <string name="dot">●</string>
    <string name="ipgw_hint">请绘制手势进行网关连接</string>
    <string name="ipgw_shake_hint">摇一摇连接网关</string>
    <string name="ipgw_shake_hint2">你也可以点击图片进行连接</string>
    <string name="ipgw_free">连接免费</string>
    <string name="ipgw_shake_free">免费</string>
    <string name="ipgw_nofree">连接收费</string>
    <string name="ipgw_shake_nofree">收费</string>
    <string name="ipgw_disconnect">断开连接</string>
    <string name="ipgw_disconnect_all">断开全部</string>
    <string name="settings_title_username">账户管理</string>
    <string name="settings_title_me">个人中心</string>
    <string name="settings_title_settings">模块设置</string>
    <string name="settings_title_info">常用信息</string>
    <string name="settings_title_about">关于</string>
    <string name="settings_title_userinfo">个人信息</string>
    <string name="settings_title_set">设置</string>
    <string name="settings_qrcode">二维码扫描</string>
    <string name="settings_message">我的消息</string>
    <string name="settings_certification">我的凭证</string>
    <string name="settings_lostfound">为捡到的校园卡寻找失主</string>
    <string name="settings_ipgw">网关控制</string>
    <string name="settings_pkumail">自动登录邮箱</string>
    <string name="settings_gesture">手势设置</string>
    <string name="settings_notifications">提醒设置</string>
    <string name="settings_its_noti">通知栏网关控制</string>
    <string name="settings_its_noti_icon">状态栏常驻图标</string>
    <string name="settings_its_noti_hint">开启后，可以直接在下拉通知栏进行网关的连接操作。仅对Android 4.1及以上有效。</string>
    <string name="settings_shake">按钮连接网关</string>
    <string name="settings_shake_hint">如果开启此项，则在网关连接界面使用传统的按钮模式进行网关连接；否则则通过手势绘制来进行网关连接；而不管开启或关闭，均可以摇一摇连接免费地址。设置后退出并重进方可生效。</string>
    <string name="settings_autoweek">自动获取周数</string>
    <string name="settings_week">当前周数</string>
    <string name="settings_course">课表设置</string>
    <string name="settings_course_title">课程来源设置 / 重新同步后生效</string>
    <string name="settings_course_elective">从elective获取</string>
    <string name="settings_course_dean">从教务获取</string>
    <string name="settings_course_dual">显示辅/双课程</string>
    <string name="settings_course_custom">显示自选课表</string>
    <string name="settings_course_hint">如果上课时间发生冲突，那么从教务获取的正式课程将会覆盖从elective获取课程；辅/双课程不会对已有课程进行覆盖；而添加的自选课程将直接覆盖所有冲突的课程。</string>
    <string name="settings_petest">输入体测成绩查询密码</string>
    <string name="settings_clearcache">清除缓存</string>
    <string name="settings_phone">常用电话</string>
    <string name="settings_map">北大地图</string>
    <string name="settings_calendar">北京大学校历</string>
    <string name="settings_subway">北京地铁线路图</string>
    <string name="settings_bill">校园卡余额</string>
    <string name="settings_faq">常见FAQ</string>
    <string name="settings_report">意见反馈</string>
    <string name="settings_report_new">新功能建议</string>
    <string name="settings_about">关于此软件</string>
    <string name="settings_recommended">推荐给好友</string>
    <string name="settings_update">检查更新</string>
    <string name="shows_prices_hint">绿色代表学生票，浅黄代表校外票</string>
    <string name="shows_more">详细信息</string>
    <string name="nc_setsource_hint">请选择你想订阅的源，按右上角保存</string>
    <string name="nc_setsource_hint_1">想要发布你自己的通知？请戳</string>
    <string name="nc_setsource_hint_3">花几秒钟时间注册，立即拥有你自己的发布源！</string>
    <string name="lost">失物</string>
    <string name="found">招领</string>
    <string name="lostfound_detail">详细信息</string>
    <string name="lostfound_image">查看大图</string>
    <string name="lostfound_chat">私信发布者</string>
    <string name="lostfound_phone">呼叫号码</string>
    <string name="lostfound_hint_add">请详细填写以下信息，按右上角发布</string>
    <string name="lostfound_hint_name">物品名称</string>
    <string name="lostfound_hint_lost_or_found">信息类型</string>
    <string name="lostfound_hint_type">物品分类</string>
    <string name="lostfound_hint_card">卡片或钱包</string>
    <string name="lostfound_hint_book">书籍或笔记本</string>
    <string name="lostfound_hint_device">电子设备</string>
    <string name="lostfound_hint_others">其他</string>
    <string name="lostfound_hint_detail">详细信息</string>
    <string name="lostfound_hint_detail_add">如果要发布的是招领信息，您可以在撰写详细信息或者拍照时酌情保留部分关键信息，以便日后识别、询问和确认失主</string>
    <string name="lostfound_hint_time">丢失/拾到的时间</string>
    <string name="lostfound_hint_image_add">添加图片</string>
    <string name="lostfound_hint_image_select">选择图片</string>
    <string name="lostfound_hint_image_delete">清除图片</string>
    <string name="lostfound_hint_contact">你的联系方式</string>
    <string name="lostfound_hint_number">联系电话</string>
    <string name="report_bug">反馈前请查看常见FAQ中是否已有解答。</string>
    <string name="report_new">你还想要什么新功能呢？</string>
    <string name="about_version">版本号</string>
    <string name="about_time">最后更新日期</string>
    <string name="about_dev_name">开发者</string>
    <string name="about_dev_chenzhang">陈章</string>
    <string name="about_help_name">协助开发</string>
    <string name="about_help_xiongdian">熊典</string>
    <string name="about_art_name">美工</string>
    <string name="about_art_value">熊典/唐褚怡</string>
    <string name="about_guide_name">指导单位</string>
    <string name="about_guide_value">北大网教办</string>
    <string name="about_team_name">运营团队</string>
    <string name="about_team_value">新青年网络文化工作室</string>
    <string name="about_contact">联系我们</string>
    <string name="about_ckcz123">ckcz123@126.com</string>
    <string name="about_copyright">Copyright &#169; 2015. Zhang Chen, EECS, Peking University</string>
    <string name="about_rights">All rights reserved.</string>
    <string name="about_recommend">北京大学官方推荐客户端</string>
    <string name="custom_course_name">课程名称</string>
    <string name="custom_course_location">课程地点</string>
	<string name="custom_course_when_hint"><![CDATA[请点亮上课时间；<font color=\'#00ffff\'>青色</font>代表已存在教学网课程
	    		<br /><font color=\'#ffff00\'>黄色</font>代表每周，<font color=\'#00ff00\'>绿色</font>代表单周，<font color=\'#ff00ff\'>紫红色</font>代表双周]]></string>
    <string name="custom_course_hint">请填写以下信息，按右上角保存</string>
    <string name="certification_hint_1">凭证包括您从PKU Helper获取的入场券、优惠券等内容。</string>
    <string name="certification_hint_2">要获取凭证，请关注"通知中心"的活动</string>
    <string name="settings_notification_hint">为了便于PKU Helper更好的为您服务，如果您有类似于一键清理内存的安全软件等，请将PKU Helper加入其白名单中。</string>
    <string name="settings_notification_course">课程提醒</string>
    <string name="settings_notification_course_hint">如果开启此开关，将在每晚22点以后提醒第二天的课程数目与第一节课上课时间，以及会在每堂课开始前25分钟内提醒上课时间和地点。</string>
    <string name="settings_notification_exam">考试提醒</string>
    <string name="settings_notification_exam_hint">如果开启此开关，将会在考前提醒你考试的时间和地点。</string>
    <string name="settings_notification_notification">消息推送</string>
    <string name="settings_notification_notification_setting">推送项目设置</string>
    <string name="settings_notification_pkuhole_setting">树洞推送设置</string>
    <string name="settings_notification_notification_hint">如果开启消息推送，将会在有新通知时第一时间通知您。</string>
    <string name="settings_pushes_hint">请选中你想接收推送的源，按右上角保存</string>
    <string name="settings_found_hint">如果你捡到了带有学号的物品，比如校园卡/学生证/&#8230;时，可以在这里向对方发送一条信息告知对方。</string>
    <string name="settings_found_username">对方学号</string>
    <string name="settings_found_type">物品类型</string>
    <string name="settings_found_name">物品名称</string>
    <string name="settings_found_phone">联系方式</string>
    <string name="exam_name">考试课程</string>
    <string name="exam_location">考试地点</string>
    <string name="exam_date">考试日期</string>
    <string name="exam_time">考试时间</string>
    <string name="widget_refresh">刷新课程</string>
    <string name="widget_edit">编辑课程</string>
    <string name="widget_text">点击按钮立刻连接网关！</string>
    <string name="widget_its">网关连接</string>
    <string name="widget_course">课程表</string>
    <string name="widget_course2">今日课程</string>
    <string name="widget_hint_no_class">你今天没有课程哦~</string>
    <string name="widget_exam">考试倒计时</string>
    <string name="widget_hint_no_exam">你还没有添加考试哦~</string>
    <string name="chat_seeall">点击查看</string>
    <string name="chat_send_hint">发送新消息给：</string>
    <string name="chat_send_to">收件人id</string>
    <string name="query_phone">搜索电话&#8230;</string>
    <string name="settings_mypku_hint">请选中你想显示在我的PKU列表中的项目，按右上角保存</string>
    <string name="bbs_bottom_top">热门帖子</string>
    <string name="bbs_bottom_allboards">版面列表</string>
    <string name="bbs_bottom_search">搜索帖子</string>
    <string name="bbs_bottom_me">个人信息</string>
    <string name="query_bbs_boards">搜索版面&#8230;</string>
    <string name="bbs_boards_all">所有版面</string>
    <string name="bbs_boards_favorite">收藏版面</string>
    <string name="bbs_username">用户名</string>
    <string name="bbs_userinfo_nickname">用户昵称</string>
    <string name="bbs_userinfo_numposts">发帖数目</string>
    <string name="bbs_userinfo_numlogins">上站次数</string>
    <string name="bbs_userinfo_life">生命值</string>
    <string name="bbs_userinfo_staytime">上站总时间（分钟）</string>
    <string name="bbs_userinfo_createtime">账号注册时间</string>
    <string name="bbs_userinfo_lasttime">上次登录时间</string>
    <string name="bbs_userinfo_autologin">自动登录</string>
    <string name="bbs_userinfo_relogin">重新登录</string>
    <string name="bbs_userinfo_logout">注销</string>
    <string name="bbs_postpage_title">请输入标题</string>
    <string name="bbs_postpage_text">请输入内容</string>
    <string name="bbs_postpage_anonymous">匿名</string>
    <string name="bbs_postpage_post">发表</string>
    <string name="bbs_reprint_hint">暂时只能转载到自己收藏的版面。</string>
    <string name="bbs_reprint">转载到：</string>
    <string name="bbs_reprint_error">你还没有收藏的版面！</string>
    <string name="bbs_search_hint">暂时只能搜索自己收藏的版面。</string>
    <string name="bbs_search">搜索</string>
    <string name="bbs_search_board">搜索版面</string>
    <string name="bbs_search_text_hint">多个关键词请用空格分开</string>
    <string name="bbs_search_error">你还没有收藏的版面！</string>
    <string name="bbs_post_mail_author">收件人</string>
    <string name="hole_all">所有树洞</string>
    <string name="hole_mine">我关注的</string>
    <string name="hole_image_hint">[图片]</string>
    <string name="hole_listitem_image_too_long">长图</string>
    <string name="lf_lost">失物启事</string>
    <string name="lf_found">招领启事</string>
    <string name="lf_mine">我发布的</string>
    <string name="helper_nav_menu_ip_gateway">网关连接</string>
    <string name="helper_nav_menu_course_table">课程表</string>
    <string name="helper_nav_menu_school_life">校园生活</string>
    <string name="helper_nav_menu_my_pku">我的PKU</string>
    <string name="helper_nav_menu_hole">P大树洞</string>
    <string name="helper_nav_menu_bbs">未名BBS</string>
    <string name="helper_nav_menu_settings">设置</string>
    <string name="action_hole_set_attention">Set Attention</string>
    <string name="action_hole_report">report</string>
</resources>