<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ipgw_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#2b2b2b"
    tools:context=".PKUHelper" >

        <ImageView
            android:id="@+id/ipgw_image_shake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/ipgw_hint"
            android:src="@drawable/shake" />
        
        <TextView
			android:id="@+id/ipgw_hint" android:textColor="#ffefefef"
			android:textSize="20sp" android:singleLine="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:text="@string/ipgw_shake_hint"
			android:layout_above="@+id/ipgw_hint2"
			android:paddingBottom="5dp"
        />

        <TextView
			android:id="@+id/ipgw_hint2" android:textColor="#aaaaaa"
			android:textSize="13sp" android:singleLine="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:text="@string/ipgw_shake_hint2"
			android:layout_above="@+id/ipgw_image_shake"
			android:paddingBottom="60dp"
        />
        
        <Switch
            android:id="@+id/ipgw_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ipgw_image_shake"
            android:layout_centerHorizontal="true"
            android:textOn="@string/ipgw_shake_nofree"
            android:paddingTop="60dp"
            android:textOff="@string/ipgw_shake_free"
            />

        <LinearLayout android:layout_centerHorizontal="true"
	        style="?android:attr/buttonBarStyle"
	        android:layout_below="@+id/ipgw_switch" android:id="@+id/button"
	        android:layout_width="wrap_content" android:layout_height="wrap_content"
	        android:paddingTop="20dp"
	        >
        	<Button 
	            android:id="@+id/ipgw_disconnect" android:text="@string/ipgw_disconnect"
	            style="?android:attr/buttonBarButtonStyle"
	            android:layout_width="wrap_content" android:layout_height="wrap_content"
	            android:textSize="12sp"
 	            android:textColor="#ffefefef"
	        />
	        <Button 
	            android:id="@+id/ipgw_disconnectall" android:text="@string/ipgw_disconnect_all"
	            android:textSize="12sp"
	            android:textColor="#ffefefef"
	            style="?android:attr/buttonBarButtonStyle"
	            android:layout_width="wrap_content" android:layout_height="wrap_content"
	        />
        </LinearLayout>
        
</RelativeLayout>