<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="#aaE8E8E7"
              android:gravity="center_horizontal"
              android:orientation="horizontal"
    >

    <ImageView
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_launcher"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        >

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:id="@+id/widget_its_buttonbar"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/widget_connect"
                android:text="@string/ipgw_free"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="12sp"
                android:background="@android:color/transparent"
                />

            <Button
                android:id="@+id/widget_connect_nofree"
                android:text="@string/ipgw_nofree"
                android:textSize="12sp"
                android:textColor="#000000"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                />

            <Button
                android:id="@+id/widget_disconnect"
                android:text="@string/ipgw_disconnect"
                android:textSize="12sp"
                android:textColor="#000000"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                />

            <Button
                android:id="@+id/widget_disconnectall"
                android:text="@string/ipgw_disconnect_all"
                android:textSize="12sp"
                android:textColor="#000000"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/widget_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_text"
            android:layout_marginTop="-9dp"
            android:textColor="#555555"
            android:paddingBottom="9dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/widget_its_buttonbar"
            android:textSize="12sp"/>

    </RelativeLayout>

</LinearLayout>