<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:id="@+id/bbs_login_view"
    >

    <EditText
        android:id="@+id/username"
        android:hint="@string/bbs_username"
        android:layout_width="fill_parent"
        android:textSize="16sp"
        android:paddingTop="10dp"
        android:maxLength="15"
        android:singleLine="true"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_width="fill_parent"
        android:textSize="16sp"
        android:paddingTop="10dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"/>

    <LinearLayout
        android:layout_centerHorizontal="true"
        style="?android:attr/buttonBarStyle"
        android:layout_below="@+id/password"
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/bbs_login"
            android:text="@string/login"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />

        <Button
            android:id="@+id/bbs_cancel"
            android:text="@string/cancel"
            android:textSize="12sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

</RelativeLayout>