<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/bbs_post_mail_author"
            android:singleLine="true"
            android:maxLength="40"
            android:layout_width="fill_parent"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:hint="@string/bbs_post_mail_author"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/bbs_post_mail_title"
            android:singleLine="true"
            android:maxLength="40"
            android:layout_width="fill_parent"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:hint="@string/bbs_postpage_title"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/bbs_post_mail_text"
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:textSize="16sp"
            android:lines="15"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/bbs_postpage_text"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="12dp">

            <Button
                android:id="@+id/bbs_post_mail_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/send"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>