<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:padding="15dp">

    <EditText
        android:id="@+id/pepassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_newpassword"
        android:inputType="textPassword">

        <requestFocus/>
    </EditText>

    <LinearLayout
        android:layout_centerHorizontal="true"
        style="?android:attr/buttonBarStyle"
        android:id="@+id/button"
        android:layout_below="@+id/pepassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/pepassword_change"
            android:text="@string/change"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />

        <Button
            android:id="@+id/pepassword_cancel"
            android:text="@string/cancel"
            android:textSize="12sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>


</RelativeLayout>