<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        >
        <TextView
	            android:id="@+id/lf_lost"
	            android:layout_weight="0.333"
	            android:layout_width="0dp"
	            android:layout_height="30dp"
	            android:text="@string/lf_lost"
	            android:gravity="center"
	            android:textSize="15sp"
	            android:textStyle="bold"
	            android:background="@drawable/lf_btn_left_selected" />
         <TextView
	            android:id="@+id/lf_found"
	            android:gravity="center"
	            android:layout_weight="0.333"
	            android:layout_width="0dp"
	            android:layout_height="30dp"
	            android:text="@string/lf_found"
	            android:textSize="15sp"
	            android:textStyle="bold"
	            android:background="@drawable/lf_btn_middle"/> 
	      <TextView
	            android:id="@+id/lf_mine"
	            android:gravity="center"
	            android:layout_weight="0.333"
	            android:layout_width="0dp"
	            android:layout_height="30dp"
	            android:text="@string/lf_mine"
	            android:textSize="15sp"
	            android:textStyle="bold"
	            android:background="@drawable/lf_btn_right"/>       
    </LinearLayout>